update project name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "top-down-react-phaser-game-template",
+  "name": "pablo-gg-game",
   "homepage": ".",
   "version": "1.0.0",
   "private": false,
