--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
   "scripts": {
     "generate-bitmap-font": "node scripts/generate-bitmap-font.js",
     "generate-atlases": "node scripts/generate-atlas-files.js",
+    "generate-separated-sprite-files": "node scripts/generate-separated-sprite-files.js",
     "copy-tileset-data": "node scripts/copy-tileset-data.js",
     "start": "cross-env IMAGE_INLINE_SIZE_LIMIT=1 PUBLIC_URL=/ react-scripts start",
     "build": "cross-env IMAGE_INLINE_SIZE_LIMIT=1 CI=false react-scripts build",
