--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mikewesthad/dungeon": "^2.0.1",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.13",
     "@react-spring/web": "^9.7.1",
@@ -42,6 +43,7 @@
     "is-mobile": "^3.1.1",
     "jest": "^27.5.1",
     "phaser": "^3.55.2",
+    "phaser-navmesh": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
