enemy follows hero

--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
     "beautiful-react-hooks": "^3.12.2",
     "classnames": "^2.3.2",
     "cross-env": "^7.0.3",
+    "grid-engine": "^2.27.1",
     "is-mobile": "^3.1.1",
     "jest": "^27.5.1",
     "phaser": "^3.55.2",
-    "phaser-navmesh": "^2.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
